basic CRUD practice done

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,8 +5,14 @@ html(lang="en")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body 
         header 
-            h1=pageTitle 
-            
+            if(!home)
+                h1=pageTitle 
+                nav 
+                    ul 
+                        li 
+                            a(href="/") Back to Home
+                        li 
+                            a(href="/search") Search
         main
             block content
         include partials/footer.pug
