--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,8 +1,10 @@
 extends base.pug
 
 block content 
+    if(errorMessage)
+        span=errorMessage
     form(method="POST")
-        input(placeholder="Title", required, type="text", name="title")
-        input(placeholder="Description", required, type="text", name="description")
+        input(placeholder="Title", required, type="text", name="title", minlength= 2, maxlength= 50)
+        input(placeholder="Description", required, type="text", name="description", minlength= 2 , maxlength= 150)
         input(placeholder="Hashtags, using comma", required, type="text", name="hashtags")
         input(type="submit", value="Upload Video")
