--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,6 +9,8 @@ block content
                 a(href="/video/upload") Upload Video
             li 
                 a(href="/search") Search
+            li  
+                a(href="/signup") Sign Up
     ul
         each video in videos
             +videoGenerator(video)
