--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -13,6 +13,8 @@ html(lang="en")
                             a(href="/") Back to Home
                         li 
                             a(href="/search") Search
+                        li  
+                            a(href="/signup") Sign Up
         main
             block content
         include partials/footer.pug
